bk_ida/gccida/g1/std_expand_builtin_va_start
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/std_expand_builtin_va_start/src/builtins.c:3399:5: error: expected ';' after expression
tree v9; // rax 
    ^
    ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/std_expand_builtin_va_start/src/builtins.c:3399:6: error: use of undeclared identifier 'v9'
tree v9; // rax 
     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/std_expand_builtin_va_start/src/builtins.c:3410:26: error: invalid operands to binary expression ('tree' (aka 'union tree_node *') and 'tree (*)[51]')
tree = make_tree( ( tree)*( &global_trees + 28), v5); 
                  ~~~~~~~^~~~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/std_expand_builtin_va_start/src/builtins.c:3411:1: error: use of undeclared identifier 'v9'
v9 = build( MODIFY_EXPR, valist->common.type, valist, tree); 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/std_expand_builtin_va_start/src/builtins.c:3412:15: error: use of undeclared identifier 'v9'
*( ( _BYTE *)&v9->block.common + 17) |= 1u; 
              ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/std_expand_builtin_va_start/src/builtins.c:3413:14: error: use of undeclared identifier 'v9'
expand_expr( v9, const_int_rtx[64], VOIDmode, EXPAND_NORMAL); 
             ^
6 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/std_expand_builtin_va_start/src/obj/builtins.o] Error 1
